# chronos

./: .gitignore  Cargo.toml  README.md  cargo-sources.json  com.francescogaglione.chronos.json  com.github.cosmic-utils.Chronos.json  com.github.cosmic_utils.Chronos.json  com.github.francesco_gaglione.chronos.json  justfile
i18n/de/: chronos.ftl
i18n/en/: chronos.ftl  cronos.ftl
i18n/es/: chronos.ftl
i18n/it/: chronos.ftl
i18n/nl/: chronos.ftl
i18n/sv/: chronos.ftl
res/: Chronos.desktop  Chronos.metainfo.xml  com.github.cosmic-utils.Chronos.metainfo.xml  com.github.francesco-gaglione.Chronos.desktop  com.github.francesco-gaglione.Chronos.metainfo.xml  com.github.francesco-gaglione.Cronos.desktop  com.github.francesco-gaglione.Cronos.metainfo.xml
src/: app.rs  config.rs  main.rs
src/core/: nav.rs
src/pages/: mod.rs  pomodoro.rs  settings.rs
