[package]
name = "chronos"
version = "0.1.4"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
i18n-embed-fl = "0.9.1"
once_cell = "1.19.0"
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.6"
log = "0.4"
serde = { version = "1", features = ["serde_derive"] }
notify-rust = "4"

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu", "smol", "about"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
